# CC-Docker

./: .env.example  .gitignore  CLAUDE.md  DISCORD_TEST_RESULTS.md  MCP_DISCORD_TEST_RESULTS.md  README.md  SPEC-DISCORD-AUTOMATION.md  SPEC-PLUGINS.md  SPEC.md  docker-compose.yml  test_discord.sh  test_parent_child_e2e.sh
container/: Dockerfile  supervisord.conf
docs/: DISCORD_SETUP.md
examples/: claude-config.yaml  create-session-with-config.sh
gateway/: Dockerfile  pyproject.toml  requirements.txt
gateway/app/: __init__.py  main.py
gateway/app/api/routes/: chat.py  discord.py  health.py  sessions.py  spawn.py  tasks.py
gateway/app/api/websocket/: stream.py  vnc.py
gateway/app/core/: config.py  dependencies.py  security.py
gateway/app/db/: database.py  models.py
gateway/app/models/: claude_config.py  container.py  message.py  session.py  task.py
gateway/app/services/: container.py  discord.py  pubsub.py  pushover.py  scheduler.py  session.py  storage.py  task.py
gateway/static/: index.html
mcp-server/: index.js  package.json
scripts/: build-container.sh  postgres-init.sql  setup.sh
skills/child-status/: SKILL.md
skills/coordinate-children/: SKILL.md
skills/delegate-task/: SKILL.md
tests/: conftest.py  requirements.txt  test_api.py  test_container.py
wrapper/: claude_runner.py  config.py  config_generator.py  health.py  main.py  pyproject.toml  redis_publisher.py  requirements.txt  stream_parser.py
