[project]
name = "cc-docker-gateway"
version = "0.1.0"
description = "FastAPI gateway for CC-Docker - containerized Claude Code orchestration"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and ASGI server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Pydantic for data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Redis
    "redis>=5.0.0",

    # AWS/MinIO client
    "aiobotocore>=2.9.0",

    # Docker
    "aiodocker>=0.21.0",

    # JWT Authentication
    "pyjwt>=2.8.0",

    # Prometheus metrics
    "prometheus-client>=0.19.0",

    # Discord integration
    "discord-py>=2.3.0",

    # Additional utilities
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
